Using generated client
